--- a/zombiecat_ppsite/src/main/webapp/resources/bootstrap/css/stylish-portfolio.css
+++ b/zombiecat_ppsite/src/main/webapp/resources/bootstrap/css/stylish-portfolio.css
@@ -107,9 +107,11 @@ h6 {
 }
 
 @media (min-width: 992px) {
+  /*
   .masthead {
     height: 100vh;
   }
+  */
   .masthead h1 {
     font-size: 5.5rem;
   }
